force-app/main/default/objects/custom_create27__c/custom_create27__c.object-meta.xml
<CustomObject>
    <label>Custom created object27</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects27</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>