force-app/main/default/objects/custom_create27__c/fields/custom_create_27field563__c.field-meta.xml
<CustomField>
    <fullName>custom_create_27field563__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 27field563</label>
    <type>Checkbox</type>
</CustomField>